--- a/Locale_index.html
+++ b/Locale_index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tic Tac Toe</title>
-  <link rel="stylesheet" href="boh.css">
+  <link rel="stylesheet" href="./Locale_style.css">
 </head>
 <body>
-  <h1>Tic Tac Toe</h1>
+  <h1>GAY GAY GO</h1>
   <div class="board" id="board"></div>
   <div class="message" id="message"></div>
   <button class="reset" id="reset">Restart Game</button>
   <button class="toggle-size" id="toggle-size">Cambia Griglia</button>
-  <script src="app.js"></script>
+  <script src="./Locale_JS.js"></script>
 </body>
 </html>
