--- a/Locale_index.html
+++ b/Locale_index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./Locale_style.css">
 </head>
 <body>
-  <h1>GAY GAY GO</h1>
+  <h1>Tic Tac Toe</h1>
   <div class="board" id="board"></div>
   <div class="message" id="message"></div>
   <button class="reset" id="reset">Restart Game</button>
